# LFP

./: .gitignore  CMakeLists.txt  Name.txt  README.md  coverage.sh  deploy.sh
.github/workflows/: build_and_test.yml  ci-build-test.yml
github/workflows/: ci-build-test.yml
scripts/: package.sh
src/: main.cpp
tests/: CMakeLists.txt  k  test_sample.cpp
